# ci-github-actions-python

./: README.md  requirements.txt  setup.cfg  tox.ini
.github/workflows/: artifact_upload.yml  ci_master.yml
Requirements/: requirements-dev-testing.txt
dev/: check_django.bat  check_django.sh  profile_PYTHON_PROG.bat  run_tests.bat  run_tests.sh
dev/Linting/: RunBandit.bat  RunBandit.sh  RunMyPy.bat  RunMyPy.sh  RunPycodestyle.bat  RunPycodestyle.sh  RunPydocstyle.bat  RunPydocstyle.sh  RunPylint.bat  RunPylint.sh
dev/Packaging/: upload_to_pypi.bat  upload_to_pypi_test.bat
dev/Testing/: RunPytest.bat  RunPytest.sh
test_package/: prog.py
tests/test_package/: test_prog.py
